@@ -31,6 +31,8 @@
 
     <java.corba.patch.name>idlj.java.corba.patch</java.corba.patch.name>
     <java.corba.patch.jar>${project.build.directory}/dependency/${java.corba.patch.name}-${project.version}.jar</java.corba.patch.jar>
+    <idlj.jdk9.args/>
+    <jacorb.jdk9.args/>
   </properties>
 
   <build>
@@ -160,27 +162,42 @@
         <jdk>[1.9,)</jdk>
       </activation>
       <properties>
+        <version.org.jacorb.jacorb>3.7</version.org.jacorb.jacorb>
         <version.compiler.plugin>3.6.0</version.compiler.plugin>
+        <idlj.jdk9.args>
+          --add-modules java.corba
+          --upgrade-module-path ${project.build.directory}/upgrademodulepath
+          --add-exports java.corba/com.sun.corba.se.spi.orb=ALL-UNNAMED
+          --add-exports java.corba/com.sun.corba.se.spi.ior=ALL-UNNAMED
+          --add-exports java.corba/com.sun.corba.se.impl.ior=ALL-UNNAMED
+        </idlj.jdk9.args>
+        <jacorb.jdk9.args>
+          --add-modules java.corba
+          --patch-module java.corba=${project.build.directory}/java9-jacorb/jacorb-omgapi-${version.org.jacorb.jacorb}.jar
+          --upgrade-module-path ${project.build.directory}/upgrademodulepath
+          --add-exports java.corba/org.omg.CORBA_2_5=ALL-UNNAMED
+          --add-exports=java.corba/org.omg.CONV_FRAME=ALL-UNNAMED
+          --add-exports=java.corba/org.omg.CSIIOP=ALL-UNNAMED
+          --add-exports=java.corba/org.omg.ETF=ALL-UNNAMED
+          --add-exports=java.corba/org.omg.GIOP=ALL-UNNAMED
+          --add-exports=java.corba/org.omg.PortableGroup=ALL-UNNAMED
+          --add-exports=java.corba/org.omg.SSLIOP=ALL-UNNAMED
+        </jacorb.jdk9.args>
+        <idlj.boot.args>--patch-module java.corba=${openjdk-orb.jar} --add-opens=java.base/java.io=java.corba</idlj.boot.args>
       </properties>
       <dependencies>
-        <dependency>
-          <groupId>org.jboss.narayana.jts</groupId>
-          <artifactId>idlj-idl</artifactId>
-          <version>${project.version}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.narayana.jts</groupId>
-          <artifactId>idlj-idl-tests</artifactId>
-          <version>${project.version}</version>
-          <scope>test</scope>
-        </dependency>
         <dependency>
           <groupId>org.jboss.narayana.jts</groupId>
           <artifactId>${java.corba.patch.name}</artifactId>
           <version>${project.version}</version>
         </dependency>
+        <dependency>
+          <groupId>org.jacorb</groupId>
+          <artifactId>jacorb-omgapi</artifactId>
+          <version>${version.org.jacorb.jacorb}</version>
+          <scope>test</scope>
+        </dependency>
       </dependencies>
-
       <build>
         <plugins>
           <plugin>
@@ -190,7 +207,7 @@
             <executions>
               <execution>
                 <id>copy-dependencies</id>
-                <phase>initialize</phase>
+                <phase>process-resources</phase>
                 <goals>
                   <goal>copy</goal>
                 </goals>
@@ -201,6 +218,14 @@
                       <artifactId>${java.corba.patch.name}</artifactId>
                       <version>${project.version}</version>
                       <type>${project.packaging}</type>
+                    </artifactItem>
+                    <artifactItem>
+                      <groupId>org.jacorb</groupId>
+                      <artifactId>jacorb-omgapi</artifactId>
+                      <version>${version.org.jacorb.jacorb}</version>
+                      <type>jar</type>
+                      <overWrite>false</overWrite>
+                      <outputDirectory>${project.basedir}/target/java9-jacorb</outputDirectory>
                     </artifactItem>
                     <artifactItem>
                       <groupId>org.jboss.narayana.jta</groupId>
@@ -215,207 +240,21 @@
             </executions>
           </plugin>
 
-          <!-- disable maven compiler in favour of the ant javac task
-            (when https://issues.apache.org/jira/browse/MCOMPILER-279 is fixed renable it)
-            -->
-<!--
           <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <executions>
               <execution>
                 <id>default-compile</id>
-                <phase>none</phase>
-              </execution>
-              <execution>
-                <id>default-testCompile</id>
-                <phase>none</phase>
-              </execution>
-            </executions>
-          </plugin>
--->
-          <plugin>
-            <artifactId>maven-antrun-plugin</artifactId>
-            <version>1.8</version>
-            <executions>
-              <execution>
-                <id>compile-j9</id>
-                <phase>compile</phase>
-                <goals>
-                  <goal>run</goal>
-                </goals>
-                <configuration>
-                  <tasks name="compile sources">
-                    <mkdir dir="${project.build.directory}/classes"/>
-                    <property name="compile_classpath" refid="maven.compile.classpath"/>
-                    <javac verbose="yes" destdir="${project.build.directory}/classes" classpath="${compile_classpath}"
-                      excludes="**/javaidl/**,**/ibmorb/**,**/jacorb/**">
-<!--
-                    <arg>-upgrade-module-path</arg>
-                    <arg>${project.build.directory}/upgrademodulepath</arg>
-                    <arg>-add-modules</arg>
-                    <arg>java.corba,java.transaction</arg>
--->
-                      <compilerarg value="--upgrade-module-path"/>
-                      <compilerarg value="${project.build.directory}/upgrademodulepath"/>
-
-                      <compilerarg value="--add-modules"/>
-                      <compilerarg value="java.corba"/>
-                      <compilerarg value="--patch-module"/>
-                      <compilerarg value="java.corba=${java.corba.patch.jar}"/>
-                      <compilerarg value="--add-exports"/>
-                      <compilerarg value="java.corba/org.omg.CORBA=ALL-UNNAMED"/>
-                      <compilerarg value="--add-exports"/>
-                      <compilerarg value="java.corba/org.omg.CORBA.portable=ALL-UNNAMED"/>
-                      <compilerarg value="--add-exports"/>
-                      <compilerarg value="java.corba/org.omg.CORBA.ORBPackage=ALL-UNNAMED"/>
-                      <compilerarg value="--add-exports"/>
-                      <compilerarg value="java.corba/org.omg.PortableInterceptor=ALL-UNNAMED"/>
-                      <compilerarg value="--add-exports"/>
-                      <compilerarg value="java.corba/org.omg.PortableServer=ALL-UNNAMED"/>
-                      <src>
-                        <pathelement location="${project.build.sourceDirectory}"/>
-                      </src>
-                    </javac>
-                  </tasks>
-                </configuration>
-              </execution>
-              <execution>
-                <id>testCompile-j9</id>
-                <phase>test-compile</phase>
-                <goals>
-                  <goal>run</goal>
-                </goals>
-                <configuration>
-                  <tasks name="compile test sources">
-                    <mkdir dir="${project.build.directory}/test-classes"/>
-                    <property name="compile_classpath" refid="maven.compile.classpath"/>
-                    <property name="test_classpath" refid="maven.test.classpath"/>
-                    <javac destdir="${project.build.directory}/test-classes" classpath="${compile_classpath}:${test_classpath}"
-                      excludes="**/javaidl/**,**/ibmorb/**,**/jacorb/**,**/GenericRecoveryCreatorUnitTest.java">
-                      <compilerarg value="--add-modules"/>
-                      <compilerarg value="java.corba"/>
-                      <compilerarg value="--upgrade-module-path"/>
-                      <compilerarg value="${project.build.directory}/upgrademodulepath"/>
-
-                      <compilerarg value="--patch-module"/>
-                      <compilerarg value="java.corba=${java.corba.patch.jar}"/>
-                      <compilerarg value="--add-exports"/>
-                      <compilerarg value="java.corba/org.omg.CORBA=ALL-UNNAMED"/>
-                      <compilerarg value="--add-exports"/>
-                      <compilerarg value="java.corba/org.omg.CORBA.portable=ALL-UNNAMED"/>
-                      <compilerarg value="--add-exports"/>
-                      <compilerarg value="java.corba/org.omg.CORBA.ORBPackage=ALL-UNNAMED"/>
-                      <compilerarg value="--add-exports"/>
-                      <compilerarg value="java.corba/org.omg.PortableInterceptor=ALL-UNNAMED"/>
-                      <compilerarg value="--add-exports"/>
-                      <compilerarg value="java.corba/org.omg.PortableServer=ALL-UNNAMED"/>
-
-                      <src>
-                        <pathelement location="${project.build.testSourceDirectory}"/>
-                      </src>
-                    </javac>
-                  </tasks>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>${version.compiler.plugin}</version>
-            <executions>
-              <execution>
-                <phase>none</phase>
                 <goals>
                   <goal>compile</goal>
                 </goals>
-                <id>default-compile</id>
                 <configuration>
-                  <!-- fork is needed so compiler args can be used -->
-                  <fork>true</fork>
                   <compilerArgs>
+                    <arg>--add-modules</arg>
+                    <arg>java.corba</arg>
                     <arg>--upgrade-module-path</arg>
                     <arg>${project.build.directory}/upgrademodulepath</arg>
-                    <arg>--add-modules</arg>
-                    <arg>java.corba,java.transaction</arg>
-
-<!--
-                    <arg>-upgrade-module-path</arg>
-                    <arg>${project.build.directory}/upgrademodulepath</arg>
-                    <arg>-add-modules</arg>
-                    <arg>java.corba,java.transaction</arg>
-                    <arg>-add-exports</arg>
-                    <arg>java.corba/org.omg.CORBA.portable=ALL-UNNAMED</arg>
--->
-<!--
-                    <arg>-patch-module</arg>
-                    <arg>java.corba=${java.corba.patch.jar}</arg>
-                    <arg>-add-exports</arg>
-                    <arg>java.corba/org.omg.CORBA=ALL-UNNAMED</arg>
-                    <arg>-add-exports</arg>
-                    <arg>java.corba/org.omg.CORBA.ORBPackage=ALL-UNNAMED</arg>
-                    <arg>-add-exports</arg>
-                    <arg>java.corba/org.omg.PortableInterceptor=ALL-UNNAMED</arg>
-                    <arg>-add-exports</arg>
-                    <arg>java.corba/org.omg.PortableServer=ALL-UNNAMED</arg>
--->
                   </compilerArgs>
-                  <excludes>
-                    <exclude>**/jacorb/**</exclude>
-                  </excludes>
-                </configuration>
-              </execution>
-              <execution>
-                <id>default-testCompile</id>
-                <phase>none</phase>
-                <configuration>
-                  <compilerArgs>
-                    <arg>--patch-module</arg>
-                    <arg>java.corba=${java.corba.patch.jar}</arg>
-                    <arg>--add-exports</arg>
-                    <arg>java.corba/org.omg.CORBA=ALL-UNNAMED</arg>
-                    <arg>--add-exports</arg>
-                    <arg>java.corba/org.omg.CORBA.portable=ALL-UNNAMED</arg>
-                    <arg>--add-exports</arg>
-                    <arg>java.corba/org.omg.CORBA.ORBPackage=ALL-UNNAMED</arg>
-                    <arg>--add-exports</arg>
-                    <arg>java.corba/org.omg.PortableInterceptor=ALL-UNNAMED</arg>
-                    <arg>--add-exports</arg>
-                    <arg>java.corba/org.omg.PortableServer=ALL-UNNAMED</arg>
-                  </compilerArgs>
-                  <excludes>
-                    <exclude>**/jacorb/**</exclude>
-                  </excludes>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>default-test</id>
-                <phase>test</phase>
-                <goals>
-                  <goal>test</goal>
-                </goals>
-                <configuration>
-                  <skip>false</skip>
-                  <excludes>
-                    <exclude>**/common/**</exclude>
-                    <exclude>**/ExampleXAResource.java</exclude>
-                    <exclude>**/JTSTestCase.java</exclude>
-                    <exclude>**/LastOnePhaseResource.java</exclude>
-                    <exclude>**/implicit/**</exclude>
-                  </excludes>
-                  <classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl</classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl:test-jar</classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:ibmorb-idl</classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:ibmorb-idl:test-jar</classpathDependencyExcludes>
-                  </classpathDependencyExcludes>
                 </configuration>
               </execution>
             </executions>
@@ -467,6 +306,7 @@
                 </goals>
                 <configuration>
                   <skip>false</skip>
+                  <argLine>${jacorb.jdk9.args}</argLine>
                   <systemProperties combine.children="append"/>
                   <excludes>
                     <exclude>**/common/**</exclude>
@@ -526,6 +366,7 @@
                 </goals>
                 <configuration>
                   <skip>false</skip>
+                  <argLine>${idlj.jdk9.args}</argLine>
                   <systemProperties combine.children="append" />
                   <excludes>
                     <exclude>**/common/**</exclude>
@@ -593,13 +434,13 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <executions>
               <execution>
-                <id>surefire-idlj</id>
+                <id>surefire-idlj-openjdk</id>
                 <phase>test</phase>
                 <goals>
                   <goal>test</goal>
                 </goals>
                 <configuration>
-                  <argLine>${idlj.boot.args}</argLine>
+                  <argLine>${idlj.jdk9.args} ${idlj.boot.args}</argLine>
                   <skip>false</skip>
                   <systemProperties combine.children="append" />
                   <excludes>
@@ -609,7 +450,7 @@
                     <exclude>**/LastOnePhaseResource.java</exclude>
                     <exclude>**/implicit/**</exclude>
                   </excludes>
-                  <reportsDirectory>${project.build.directory}/idlj-surefire-reports</reportsDirectory>
+                  <reportsDirectory>${project.build.directory}/idlj-openjdk-surefire-reports</reportsDirectory>
                   <classpathDependencyExcludes>
                     <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl</classpathDependencyExcludes>
                     <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl:test-jar</classpathDependencyExcludes>
